Finish Ims Gui.